--- a/src/pages/Account_Location.page
+++ b/src/pages/Account_Location.page
@@ -1,3 +1,4 @@
+<!-- Created by Navaneeth -->
 <apex:page standardController="Account" showHeader="false" standardStylesheets="false">
 
 <apex:image url="https://maps.googleapis.com/maps/api/staticmap?markers={! account.Location__Latitude__s },{! account.Location__Longitude__s }&zoom=13&size=320x240&sensor=false"/>
